--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Hot-Topics</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya|Open+Sans" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
@@ -19,7 +18,7 @@
         <img class="logo" src="./img/logo.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="partials/content.html" class="button">Home</a></li>
+                <li><a href="partials/content.html" class="button">Content</a></li>
                 <li><a href="partials/portfolio.html" class="button">Portfolio</a></li>
             </ul>
         </nav>
